<?xml version="1.0"?>
<package format="2">
  <name>op3_joint_test</name>
  <version>0.0.0</version>
  <description>
    The op3_joint_test package
  </description>

  <license>Apache 2.0</license>
  <maintainer email="komix@todo.todo">komix</maintainer>
  <!--
  <author email="jane.doe@example.com">Jane Doe</author>
  <url type="website">http://wiki.ros.org/op3_joint_test</url>
  -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <exec_depend>op3_manager</exec_depend>

</package>
